--- a/MasterOfMissingStuff/app/src/main/res/layout/insertip.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/insertip.xml
@@ -7,9 +7,10 @@
 
     <Button
         android:id="@+id/button8"
-        android:layout_width="62dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="150dp"
+        android:layout_width="61dp"
+        android:layout_height="67dp"
+        android:layout_marginTop="514dp"
+        android:layout_marginBottom="68dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
         android:textAlignment="center"
@@ -23,16 +24,17 @@
         app:iconTintMode="multiply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword2"
+        app:layout_constraintTop_toTopOf="parent"
         app:rippleColor="#FFFFFF"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
         android:id="@+id/imageView9"
-        android:layout_width="230dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="149dp"
+        android:layout_width="234dp"
+        android:layout_height="178dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="71dp"
         android:contentDescription="@string/moms_logo"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
@@ -46,8 +48,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="7dp"
+        android:layout_marginTop="330dp"
+        android:layout_marginBottom="1dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Insert IP"
@@ -55,14 +57,15 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword2"
         app:layout_constraintStart_toStartOf="@+id/imageView9"
-        app:layout_constraintTop_toBottomOf="@+id/imageView9"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
         tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <EditText
         android:id="@+id/editTextNumberPassword2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
+        android:layout_marginBottom="100dp"
         android:ems="10"
         android:fontFamily="sans-serif-light"
         android:hint="Insert Port"
