--- a/MasterOfMissingStuff/app/src/main/res/layout/item.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/item.xml
@@ -7,9 +7,9 @@
 
     <Button
         android:id="@+id/button11"
-        android:layout_width="62dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="56dp"
+        android:layout_width="61dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="68dp"
         android:background="#A5A4A4"
         android:fontFamily="sans-serif-light"
         android:rotation="-180"
@@ -29,40 +29,26 @@
         app:rippleColor="#FFFFFF"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="137dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="247dp"
-        android:layout_marginBottom="11dp"
-        android:contentDescription="@string/locate_item"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/placeholder"
-        tools:ignore="ImageContrastCheck" />
-
     <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginStart="37dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-light"
         android:text="Item name"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/imageView8"
-        app:layout_constraintStart_toStartOf="@+id/imageView8"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="188dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="23dp"
+        android:layout_width="195dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="38dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
         android:text="Locate item"
@@ -77,7 +63,7 @@
         app:layout_constraintBottom_toTopOf="@+id/switch1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView8"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         tools:ignore="TextContrastCheck" />
 
     <ImageView
@@ -85,7 +71,7 @@
         android:layout_width="219dp"
         android:layout_height="0dp"
         android:layout_marginTop="59dp"
-        android:layout_marginBottom="14dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -94,9 +80,9 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="138dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="9dp"
+        android:layout_width="141dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="27dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
         android:text="Remove"
@@ -114,29 +100,30 @@
         app:layout_constraintTop_toBottomOf="@+id/switch2" />
 
     <Switch
-        android:id="@+id/switch1"
-        android:layout_width="121dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="sans-serif-light"
-        android:text="Lock"
-        android:textSize="18dp"
-        app:layout_constraintBottom_toTopOf="@+id/switch2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
-
-    <Switch
         android:id="@+id/switch2"
-        android:layout_width="121dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="22dp"
+        android:layout_width="122dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="31dp"
         android:fontFamily="sans-serif-light"
         android:text="Track"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/switch1" />
+
+    <Switch
+        android:id="@+id/switch1"
+        android:layout_width="125dp"
+        android:layout_height="65dp"
+        android:fontFamily="sans-serif-light"
+        android:text="Lock"
+        android:textSize="18dp"
+        app:layout_constraintBottom_toTopOf="@+id/switch2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
