--- a/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
@@ -7,9 +7,9 @@
 
     <Button
         android:id="@+id/button9"
-        android:layout_width="62dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="83dp"
+        android:layout_width="61dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="68dp"
         android:background="#A5A4A4"
         android:fontFamily="sans-serif-light"
         android:rotation="-180"
@@ -24,6 +24,7 @@
         app:iconTintMode="multiply"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:rippleColor="#FFFFFF"
@@ -44,8 +45,8 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="242dp"
-        android:layout_height="0dp"
+        android:layout_width="267dp"
+        android:layout_height="51dp"
         android:layout_marginTop="186dp"
         android:layout_marginBottom="67dp"
         android:background="#8A6262"
@@ -103,7 +104,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="146dp"
-        android:layout_marginRight="146dp"
         android:layout_marginBottom="78dp"
         android:fontFamily="sans-serif-light"
         android:text="Item 1"
