--- a/MasterOfMissingStuff/app/src/main/res/layout/additem.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/additem.xml
@@ -34,15 +34,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="38dp"
+        android:autofillHints=""
         android:ems="10"
         android:fontFamily="sans-serif-light"
+        android:hint="@string/insert_name"
         android:inputType="textPersonName"
-        android:text="Insert name"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <TextView
         android:id="@+id/textView4"
