--- a/MasterOfMissingStuff/app/src/main/res/layout/item.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/item.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="37dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="sans-serif-light"
-        android:text="Item name"
+        android:text="@string/item_name"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="24sp"
@@ -51,7 +51,7 @@
         android:layout_marginBottom="38dp"
         android:background="#8A6262"
         android:fontFamily="sans-serif-light"
-        android:text="Locate item"
+        android:text="@string/locate_item"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
         android:textSize="14sp"
@@ -72,6 +72,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="59dp"
         android:layout_marginBottom="30dp"
+        android:contentDescription="@string/moms_logo"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
