--- a/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
@@ -1,92 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools" 
+    android:layout_height="match_parent" android:layout_width="match_parent">
 
-    <Button
-        android:id="@+id/button9"
-        android:layout_width="61dp"
-        android:layout_height="67dp"
-        android:layout_marginBottom="68dp"
-        android:background="#A5A4A4"
-        android:fontFamily="sans-serif-light"
-        android:rotation="-180"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        app:backgroundTint="#A5A4A4"
-        app:cornerRadius="30dp"
-        app:icon="@drawable/rightarrow"
-        app:iconPadding="2dp"
-        app:iconTint="#FFFFFF"
-        app:iconTintMode="multiply"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:rippleColor="#FFFFFF"
-        tools:ignore="SpeakableTextPresentCheck" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="219dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="71dp"
-        android:layout_marginBottom="558dp"
-        android:contentDescription="@string/moms_logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/momslogo" />
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="61dp"
+            android:layout_height="67dp"
+            android:layout_marginBottom="68dp"
+            android:background="#A5A4A4"
+            android:fontFamily="sans-serif-light"
+            android:rotation="-180"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"
+            app:backgroundTint="#A5A4A4"
+            app:cornerRadius="30dp"
+            app:icon="@drawable/rightarrow"
+            app:iconPadding="2dp"
+            app:iconTint="#FFFFFF"
+            app:iconTintMode="multiply"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:rippleColor="#FFFFFF"
+            tools:ignore="SpeakableTextPresentCheck" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="267dp"
-        android:layout_height="51dp"
-        android:layout_marginTop="186dp"
-        android:layout_marginBottom="67dp"
-        android:background="#8A6262"
-        android:fontFamily="sans-serif-light"
-        android:text="Search for item..."
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="14sp"
-        app:backgroundTint="#DFDEDE"
-        app:cornerRadius="30dp"
-        app:icon="@drawable/magnifier"
-        app:iconPadding="0dp"
-        app:iconTint="#FFFFFF"
-        app:iconTintMode="multiply"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck" />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="219dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="71dp"
+            android:layout_marginBottom="558dp"
+            android:contentDescription="@string/moms_logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/momslogo" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="288dp"
-        android:fontFamily="sans-serif-light"
-        android:text="My Items"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="267dp"
+            android:layout_height="51dp"
+            android:layout_marginTop="186dp"
+            android:layout_marginBottom="67dp"
+            android:background="#8A6262"
+            android:fontFamily="sans-serif-light"
+            android:text="Search for item..."
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            app:backgroundTint="#DFDEDE"
+            app:cornerRadius="30dp"
+            app:icon="@drawable/magnifier"
+            app:iconPadding="0dp"
+            app:iconTint="#FFFFFF"
+            app:iconTintMode="multiply"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="400dp"
-        android:layout_height="119dp"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="288dp"
+            android:fontFamily="sans-serif-light"
+            android:text="My Items"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="100dp"
+            app:layout_constraintBottom_toTopOf="@+id/button9"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            tools:layout_editor_absoluteX="16dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</ScrollView>
