--- a/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
@@ -37,9 +37,9 @@
             android:layout_width="219dp"
             android:layout_height="100dp"
             android:layout_marginTop="71dp"
-            android:layout_marginBottom="558dp"
+            android:layout_marginBottom="7dp"
             android:contentDescription="@string/moms_logo"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -83,13 +83,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ListView
+        <com.moms.app.views.ExpandedListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="1"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="100dp"
+            android:layout_weight="1"
             app:layout_constraintBottom_toTopOf="@+id/button9"
             app:layout_constraintTop_toBottomOf="@+id/textView"
             tools:layout_editor_absoluteX="16dp" />
