--- a/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/myitems.xml
@@ -8,8 +8,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="216dp"
+            android:layout_height="127dp"
+            android:layout_marginTop="59dp"
+            android:layout_marginBottom="12dp"
+            android:contentDescription="@string/moms_logo"
+            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/momslogo" />
+
         <Button
-            android:id="@+id/button9"
+            android:id="@+id/button3"
             android:layout_width="61dp"
             android:layout_height="67dp"
             android:layout_marginBottom="68dp"
@@ -27,72 +40,51 @@
             app:iconTintMode="multiply"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
             app:rippleColor="#FFFFFF"
             tools:ignore="SpeakableTextPresentCheck" />
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="219dp"
-            android:layout_height="100dp"
-            android:layout_marginTop="71dp"
-            android:layout_marginBottom="7dp"
-            android:contentDescription="@string/moms_logo"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/momslogo" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="267dp"
-            android:layout_height="51dp"
-            android:layout_marginTop="186dp"
-            android:layout_marginBottom="67dp"
-            android:background="#8A6262"
+        <EditText
+            android:id="@+id/editTextTextPersonName4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginBottom="60dp"
+            android:ems="10"
             android:fontFamily="sans-serif-light"
-            android:text="Search for item..."
+            android:hint="Search for item..."
+            android:inputType="textPersonName"
             android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            app:backgroundTint="#DFDEDE"
-            app:cornerRadius="30dp"
-            app:icon="@drawable/magnifier"
-            app:iconPadding="0dp"
-            app:iconTint="#FFFFFF"
-            app:iconTintMode="multiply"
             app:layout_constraintBottom_toTopOf="@+id/textView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="TouchTargetSizeCheck" />
+            app:layout_constraintStart_toStartOf="@+id/imageView"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="288dp"
+            android:layout_marginBottom="13dp"
             android:fontFamily="sans-serif-light"
             android:text="My Items"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24sp"
+            app:layout_constraintBottom_toTopOf="@+id/listview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />
 
         <com.moms.app.views.ExpandedListView
             android:id="@+id/listview"
-            android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="100dp"
+            android:layout_width="0dp"
+            android:layout_height="400dp"
             android:layout_weight="1"
-            app:layout_constraintBottom_toTopOf="@+id/button9"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            tools:layout_editor_absoluteX="16dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
