New locate footage background

--- a/MasterOfMissingStuff/app/src/main/res/layout/additem.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/additem.xml
@@ -38,9 +38,9 @@
         android:fontFamily="sans-serif-light"
         android:text="@string/save"
         android:textAlignment="center"
-        android:textColor="#FFFFFF"
+        android:textColor="#AEAEAE"
         android:textSize="14sp"
-        app:backgroundTint="#878686"
+        app:backgroundTint="#E4EAEE"
         app:cornerRadius="30dp"
         app:iconPadding="0dp"
         app:iconTint="#FFFFFF"
