--- a/MasterOfMissingStuff/app/src/main/res/layout/locate_footage.xml
+++ b/MasterOfMissingStuff/app/src/main/res/layout/locate_footage.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#62def8">
+    android:background="#6BDADADA">
 
     <ImageView
         android:id="@+id/locateFootageView"
